create some initial test
